...
                        print('logged out...');
                        sessionManager.clearToken();
                        sessionManager.clearUsername();
                        Navigator.pushReplacement(context, MaterialPageRoute(builder: (context) => const Authentication()));
                      },
                      child: RichText(
                        key: const Key("logout"),
                        text: const TextSpan(
                            children: [
                              WidgetSpan(
                                child: Icon(
                                  Icons.arrow_back_ios,
                                  color: Colors.white,
...
